# adventofcode2025

./: .gitignore  README.md  pyproject.toml  runtimes.md
src/adventofcode2025/: d01.py  d02.py  d03.py  d04.py  d05.py  d06.py  d07.py  d08.py  d09.py  d10.py  d11.py  d12.py
src/aoc2025/: d01.py
src/util/: __init__.py  aoc.py  solution.py  solution_template.py
