[project]
name = "adventofcode2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cffi==2.0.0",
    "mip==1.16rc0",
    "numpy>=2.3.5",
    "tabulate>=0.9.0",
]

[project.scripts]
aoc-create = "util.aoc:create_solution"
aoc-profile = "util.aoc:profile_solution"
aoc-run = "util.aoc:run_solutions"
aoc-table = "util.aoc:update_runtimes"

[build-system]
requires = ["uv_build>=0.9.5,<0.10.0"]
build-backend = "uv_build"
